--- a/restaurantTemplate/style.scss
+++ b/restaurantTemplate/style.scss
@@ -38,6 +38,10 @@ header{
                 color: $black;
             }
         }
+
+        .mobile {
+            display: none;
+        }
     }
     .contentContainer{
         display: flex;
@@ -119,12 +123,12 @@ main{
         }
     }
     #chef{
-        height: 100vh;
+        height: auto;
         width: 100%;
         display: flex;
         img{
             width: 50%;
-            height: 100%;
+            height: auto;
         }
         .content{
             width: calc(50% - 50px);
@@ -132,13 +136,105 @@ main{
             padding: 25px;
             background-color: $red;
             h2{
+                font-size: 2.5em;
                 color: $white;
             }
             h3{
                 color: $black;
             }
             p{
+                font-size: 1.3em;
                 color: $white;
+            }
+        }
+    }
+
+    #location{
+        height: 250px;
+        width: 100%;
+        display: flex;
+        .footerSection{
+            width: 50%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            .textContainer{
+                display: flex;
+                width: 80%;
+                img{
+                    width: 40px;
+                    height: 40px;
+                }
+                p{
+                    font-size: 1.5em;
+                }
+            }
+
+            .timeTable{
+                p{
+                    text-align: center;
+                    width: 100%;
+                }
+            }
+        }
+    }
+}
+
+footer{
+    width: 100%;
+    text-align: center;
+    p{
+        font-size: 1.3em;
+        font-weight: bold;
+    }
+}
+
+@media(max-width: 850px){
+    main{
+        #chef{
+    flex-direction: column;
+            img{
+                width: 100%;
+            }
+            .content{
+                width: calc(100% - 50px);
+                height: auto;
+                padding: 25px;
+            }
+        }
+    }
+}
+
+@media(max-width: 650px){
+    header .contentContainer .imgContainer {
+        display: none;
+    }
+
+    header .contentContainer .flagContainer {
+        width: 100%;
+    }
+
+    header{
+        nav{
+    
+            .links{
+                display: none;
+            }
+            .mobile {
+                display: block;
+                background-color: $red;
+                height: 40px;
+                width: 40px;
+                border-radius: 20px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                img{
+                    height: 30px;
+                    width: 30px;
+                }
             }
         }
     }
